tests/specs/ecosystem/ayonli/jsext/0_7_7.test
ayonli/jsext/0.7.7
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:66:45

